etc/iptables/ip6tables.rules
# From: https://www.lammertbies.nl/comm/info/iptables.html

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

:Always - [0:0]
:Allow - [0:0]
:Bogus - [0:0]
:Enemies - [0:0]
:Friends - [0:0]

-A INPUT -j Bogus
-A INPUT -j Always
-A INPUT -j Allow

-A FORWARD -j Bogus
-A FORWARD -j Always
-A FORWARD -j Allow

-A Bogus -p tcp -m tcp --tcp-flags SYN,FIN SYN,FIN -j DROP
-A Bogus -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP

-A Always -p udp --dport 123 -j ACCEPT
-A Always -m state --state ESTABLISHED,RELATED -j ACCEPT
-A Always -i lo -j ACCEPT

# List of devices that are considered "trusted"
# -A Friends -s 123.123.123.123 -j ACCEPT
-A Friends -j DROP

-A Allow -p icmpv6 --icmpv6-type echo-request -j Friends
-A Allow -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A Allow -p tcp -m state --state NEW -m tcp --dport 1338 -j ACCEPT
-A Allow -j DROP

COMMIT
